--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.23",
     "git-commit-msg-linter": "^4.2.1",
+    "husky": "^8.0.1",
     "jest": "^29.0.3",
+    "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
